Normalize identifiers in source tree

--- a/example.html
+++ b/example.html
@@ -1,7 +1,14 @@
-<script src="dist/kid.js"></script>
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>Hello World</title>
+    <script src="dist/kid.js"></script>
+  </head>
+  <body>
+    <script type="kidjs">
 
-<script type="kidjs">
+      write('Hello world');
 
-  write('Hello world');
-
-</script>
+    </script>
+  </body>
+</html>
