Analyze code for required permissions

--- a/example.html
+++ b/example.html
@@ -9,6 +9,10 @@
 
       write('Hello world');
 
+      addEventListener('deviceorientation', function() {
+
+      });
+
     </script>
   </body>
 </html>
