--- a/example.html
+++ b/example.html
@@ -7,7 +7,11 @@
   <body>
     <script type="kidjs">
 
-      write("Hello world");
+      circle(500, 500, 50);
+
+      wait(5);
+
+      circle(10, 10, 10);
 
     </script>
   </body>
