Update object positions each frame

--- a/example.html
+++ b/example.html
@@ -7,11 +7,7 @@
   <body>
     <script type="kidjs">
 
-      circle(500, 500, 50);
-
-      wait(5);
-
-      circle(10, 10, 10);
+      let c = circle(100, 100, 10);
 
     </script>
   </body>
