--- a/example.html
+++ b/example.html
@@ -12,7 +12,8 @@
       let l = line(40, 40, 100, 100);
       l.wiggle();
 
-      star(250, 250, 100);
+      let s = star(250, 250, 100);
+      s.speed.rotation = 1;
 
     </script>
   </body>
