Method to draw triangle

--- a/example.html
+++ b/example.html
@@ -7,28 +7,9 @@
   <body>
     <script type="kidjs">
 
-      on("click", function() {
-
-      });
-
-      let x = 1;
-      on(x == 5, function() {
-        console.log('5');
-      });
-
-      let f = function() {
-        console.log('6');
-      }
-      on(x == 6, f);
-
-      on("keypress", function(key) {
-        if (key == 'a') {
-          x = x + 1;
-          console.log(x);
-        }
-      });
-
       star(100, 100, 50);
+
+      triangle(400, 400, 100);
 
     </script>
   </body>
