Refactored rect and circle shapes

--- a/example.html
+++ b/example.html
@@ -11,6 +11,10 @@
 
       triangle(400, 400, 100);
 
+      circle(50, 50, 30);
+
+      rect(100, 100, 10, 50);
+
     </script>
   </body>
 </html>
