Display live variable value

--- a/example.html
+++ b/example.html
@@ -15,6 +15,15 @@
 
       rect(100, 100, 10, 50);
 
+      let st = 'Chris';
+      let i = 0;
+      display(40, 40, "i", true);
+
+      on('keypress', function() {
+        i++;
+      });
+
+
     </script>
   </body>
 </html>
