Transform calls to display method with expression

--- a/example.html
+++ b/example.html
@@ -17,7 +17,7 @@
 
       let st = 'Chris';
       let i = 0;
-      display(40, 40, "i", true);
+      display(40, 40, i + st);
 
       on('keypress', function() {
         i++;
