--- a/example.html
+++ b/example.html
@@ -23,6 +23,10 @@
         i++;
       });
 
+      on (i == 5, function() {
+        console.log('yeah!');
+      });
+
 
     </script>
   </body>
