Added regular polygons

--- a/example.html
+++ b/example.html
@@ -15,6 +15,9 @@
 
       rect(100, 100, 10, 50);
 
+      let p = pentagon(400, 400, 40);
+      p.spin();
+
       let st = 'Chris';
       let i = 0;
       display(40, 40, i + st);
