Apply gravity to objects

--- a/example.html
+++ b/example.html
@@ -17,6 +17,7 @@
 
       let p = pentagon(400, 400, 40);
       p.spin();
+      p.weightless = false;
 
       let st = 'Chris';
       let i = 0;
