--- a/example.html
+++ b/example.html
@@ -7,13 +7,13 @@
   <body>
     <script type="kidjs">
 
-      star(100, 100, 50);
+      star(250, 250, 50);
 
       triangle(400, 400, 100);
 
       circle(50, 50, 30);
 
-      rect(100, 100, 10, 50);
+      rect(100, 100, 10, 50).spin(4);
 
       let p = pentagon(400, 400, 40);
       p.spin();
