--- a/example.html
+++ b/example.html
@@ -11,9 +11,12 @@
 
       triangle(400, 400, 100);
 
-      circle(650, 350, 200);
+      let a = circle(650, 150, 200);
 
-      circle(650, 475, 100);
+      let b = circle(650, 375, 100);
+
+      a.anchored = false;
+      b.anchored = false;
 
 
       rect(100, 100, 10, 50).spin(4);
