Apply impulse when resolving collisions

--- a/example.html
+++ b/example.html
@@ -11,12 +11,12 @@
 
       triangle(400, 400, 100);
 
-      let a = circle(650, 150, 200);
+      let a = circle(600, 150, 200);
 
       let b = circle(650, 375, 100);
 
       a.anchored = false;
-      b.anchored = false;
+      b.anchored = true;
 
 
       rect(100, 100, 10, 50).spin(4);
