Adjust angular velocities on collision

--- a/example.html
+++ b/example.html
@@ -13,6 +13,8 @@
 
       let a = circle(600, 150, 200);
 
+      a.angularVelocity = 5;
+
       let b = circle(650, 375, 100);
 
       a.anchored = false;
