Apply position and rotation to bounding polygon

--- a/example.html
+++ b/example.html
@@ -10,7 +10,8 @@
       let s = star(400, 250, 50);
       s.anchored = false;
 
-      triangle(400, 400, 100);
+      let sq = square(400, 400, 100);
+      sq.angle = 45;
 
       let a = circle(600, 150, 200);
 
