Circle polygon collision

--- a/example.html
+++ b/example.html
@@ -7,11 +7,10 @@
   <body>
     <script type="kidjs">
 
-      let s = star(400, 250, 50);
+      let s = circle(400, 250, 50);
       s.anchored = false;
 
-      let sq = square(400, 400, 100);
-      sq.angle = 45;
+      let sq = rect(400, 400, 100, 100);
 
       let a = circle(600, 150, 200);
 
