--- a/example.html
+++ b/example.html
@@ -10,7 +10,8 @@
       let s = circle(400, 250, 50);
       s.anchored = false;
 
-      let sq = rect(400, 400, 100, 100);
+      let sq = rect(100, 100, 100, 100);
+      sq.slide(500, 500);
 
       let a = circle(600, 150, 200);
 
