--- a/example.html
+++ b/example.html
@@ -7,12 +7,17 @@
   <body>
     <script type="kidjs">
 
-      semicircle(500, 500, 50).spin();
+      let a = circle(100, 100, 100);
+      let b = rect(300, 100, 100, 100);
 
-      oval(100, 100, 40, 400).spin(1);
+      on('keydown', function(key) {
+        if (key == 'd') {
+          a.move(10, 0);
+        }
+      });
 
-      on('click', function() {
-        beep();
+      a.on('collision', function(x) {
+        console.log(x);
       });
 
     </script>
