Don't resolve collision if both objects anchored

--- a/example.html
+++ b/example.html
@@ -17,7 +17,8 @@
       });
 
       a.on('collision', function(x) {
-        console.log(x);
+        this.fill = 'yellow';
+        x.fill = 'red';
       });
 
     </script>
