--- a/example.html
+++ b/example.html
@@ -21,6 +21,9 @@
         x.fill = 'red';
       });
 
+      display(10, 10, a.position.x);
+      write(10, 50, a.position.x);
+
     </script>
   </body>
 </html>
