--- a/example.html
+++ b/example.html
@@ -7,6 +7,8 @@
   <body>
     <script type="kidjs">
 
+      fill = 'random';
+
       let a = circle(100, 100, 100);
       let b = rect(300, 100, 100, 100);
 
