--- a/example.html
+++ b/example.html
@@ -18,6 +18,7 @@
         }
       });
 
+
       a.on('collision', function(x, y) {
         x.fill = 'yellow';
         y.fill = 'red';
@@ -25,6 +26,8 @@
 
       display(10, 10, a.position.x);
       write(10, 50, a.position.x);
+
+      image(30, 30, 'cat.jpg');
 
     </script>
   </body>
