--- a/example.html
+++ b/example.html
@@ -9,6 +9,8 @@
 
       fill = 'random';
 
+      let c = curve(300, 300, 350, 350, 400, 300);
+
       let a = circle(100, 100, 100);
       let b = rect(300, 100, 100, 100);
 
