--- a/example.html
+++ b/example.html
@@ -26,7 +26,7 @@
       });
 
       display(10, 10, a.position.x);
-      write(10, 50, a.position.x);
+      write(10, 50, random(1, 6));
 
     </script>
   </body>
