--- a/example.html
+++ b/example.html
@@ -7,7 +7,7 @@
   <body>
     <script type="kidjs">
 
-      let ball = circle(width/2, height/2, 32, 32)
+      let ball = rect(width/2, height/2, 32, 32)
       ball.anchored = false;
       let player1 = rect(width/2-55, 22, 110 , 22)
       let player2 = rect(width/2-55, height-22, 110 , 22)
