--- a/example.html
+++ b/example.html
@@ -7,11 +7,10 @@
   <body>
     <script type="kidjs">
 
-      let t = 0;
-      display(10, 10, t)
-      setInterval(function() {
-        t = t + 1
-      }, 1000)
+      let t = triangle(200, 20, 30);
+      t.spin(1);
+      wait(5);
+      t.anchored = false;
 
     </script>
   </body>
