--- a/example.html
+++ b/example.html
@@ -7,14 +7,21 @@
   <body>
     <script type="kidjs">
 
-      function click(x, y) {
-        let t = triangle(x, y, 30);
-        t.spin(1);
-        wait(5);
-        t.anchored = false;
+    for (let y = 100; y < height - 100; y = y + 50) {
+      for (let x = 0; x < width; x = x + 50) {
+        let offset = (y % 100 == 0) ? 25 : 0
+        circle(x + offset, y, 5)
       }
+    }
 
-      on('click', click);
+    function drop(x, y) {
+      console.log(x, y)
+      let disc = circle(x, 0, 40)
+      disc.anchored = false
+    }
+
+    on('click', drop)
+
 
     </script>
   </body>
