Set text alignment

--- a/example.html
+++ b/example.html
@@ -21,6 +21,11 @@
 
       on('click', drop)
 
+      textAlign = 'center'
+      textBaseline = 'top'
+      write(width / 2, 10, 'Hello World')
+
+
     </script>
   </body>
 </html>
