Retain restitution when un-anchoring

--- a/example.html
+++ b/example.html
@@ -16,6 +16,7 @@
 
       function drop(x, y) {
         let disc = circle(x, 0, 40)
+        disc.bounciness = 0;
         disc.anchored = false
       }
 
