--- a/example.html
+++ b/example.html
@@ -7,24 +7,30 @@
   <body>
     <script type="kidjs">
 
-      for (let y = 100; y < height - 100; y = y + 50) {
-        for (let x = 0; x < width; x = x + 50) {
-          let offset = (y % 100 == 0) ? 25 : 0
-          circle(x + offset, y, 5)
-        }
+      gravity = 0
+
+      let ball = circle(width / 2, height / 2, 30, 20)
+      let player1 = rect(width / 2 - 50, 20, 100, 20)
+      let player2 = rect(width / 2 - 50, height - 40, 100, 20)
+
+      let wall1 = rect(0, height / 2, 10, height)
+      let wall2 = rect(width, height / 2, 10, height)
+
+      function start() {
+        ball.x = width / 2
+        ball.y = height / 2
+        ball.push(2, 6)
       }
 
-      function drop(x, y) {
-        let disc = circle(x, 0, 40)
-        disc.bounciness = 0;
-        disc.anchored = false
+      function keydown(key) {
+        if (key == 'a') player1.move(-5)
+        if (key == 'd') player1.move(5)
+        if (key == 'ArrowLeft') player2.move(-5)
+        if (key == 'ArrowRight') player2.move(5)
       }
 
-      on('click', drop)
-
-      textAlign = 'center'
-      textBaseline = 'top'
-      write(width / 2, 10, 'Hello World')
+      on('keydown', keydown)
+      on('space', start)
 
 
     </script>
