Fixed rotation bug

--- a/example.html
+++ b/example.html
@@ -15,6 +15,7 @@
 
       let wall1 = rect(0, height / 2, 10, height)
       let wall2 = rect(width, height / 2, 10, height)
+      wall2.rotate(10)
 
       function start() {
         ball.x = width / 2
