Check required parameters when creating shapes

--- a/example.html
+++ b/example.html
@@ -7,7 +7,9 @@
   <body>
     <script type="kidjs">
 
-      gravity = 0
+      rect(100, 100, 50)
+
+      /*gravity = 0
 
       let ball = circle(width / 2, height / 2, 30, 20)
       let player1 = rect(width / 2 - 50, 20, 100, 20)
@@ -31,7 +33,7 @@
       }
 
       on('keydown', keydown)
-      on('space', start)
+      on('space', start)*/
 
 
     </script>
