Updated pong example

--- a/example.html
+++ b/example.html
@@ -7,9 +7,7 @@
   <body>
     <script type="kidjs">
 
-      rect(100, 100, 50, 50)
-
-      /*gravity = 0
+      gravity = 0
 
       let ball = circle(width / 2, height / 2, 30, 20)
       let player1 = rect(width / 2 - 50, 20, 100, 20)
@@ -17,7 +15,6 @@
 
       let wall1 = rect(0, height / 2, 10, height)
       let wall2 = rect(width, height / 2, 10, height)
-      wall2.rotate(10)
 
       function start() {
         ball.x = width / 2
@@ -33,7 +30,7 @@
       }
 
       on('keydown', keydown)
-      on('space', start)*/
+      on('space', start)
 
 
     </script>
