Fixed encoding issue in output

--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Hello World</title>
-    <script src="dist/kid.js"></script>
+    <script src="dist/kid.min.js"></script>
   </head>
   <body>
     <script type="kidjs">
