Create inline function if second on parameter expression

--- a/example.html
+++ b/example.html
@@ -7,9 +7,11 @@
   <body>
     <script type="kidjs">
 
-      on('click', function() {
-        console.log('inline function');
-      });
+      /*on('click', function() {
+        console.log('test');
+      });*/
+
+      on('click', console.log('test'));
 
     </script>
   </body>
