--- a/example.html
+++ b/example.html
@@ -7,17 +7,9 @@
   <body>
     <script type="kidjs">
 
-      /*on('click', function() {
-        console.log('test');
-      });*/
+      fontSize = 100
 
-      let t = 0;
-
-      display(100, 100, t);
-
-      on('click', t = t + 1);
-
-      on(t > 5, console.log('done'));
+      write(width / 2, height / 2, "Hello World")
 
     </script>
   </body>
