Fixed rotate method

--- a/example.html
+++ b/example.html
@@ -7,9 +7,10 @@
   <body>
     <script type="kidjs">
 
-      fontSize = 100
 
-      write(width / 2, height / 2, "Hello World")
+      let button = triangle(400, 200, 50);
+      button.rotate(90)
+      button.on('click', beep())
 
     </script>
   </body>
