Don't crash while evaluating triggers

--- a/example.html
+++ b/example.html
@@ -7,10 +7,8 @@
   <body>
     <script type="kidjs">
 
-
-      let button = triangle(400, 200, 50);
-      button.rotate(90)
-      button.on('click', beep())
+      display(350, 200, mouseX)
+      display(450, 200, mouseY)
 
     </script>
   </body>
