--- a/example.html
+++ b/example.html
@@ -7,8 +7,12 @@
   <body>
     <script type="kidjs">
 
-      display(350, 200, mouseX)
-      display(450, 200, mouseY)
+      fill = 'theme';
+      stroke = false;
+
+      for (let i = 100; i < 1000; i = i + 100) {
+        rect(i, 400, 50, 400);
+      }
 
     </script>
   </body>
