Fixed double click event

--- a/example.html
+++ b/example.html
@@ -7,9 +7,7 @@
   <body>
     <script type="kidjs">
 
-      for (let i = 100; i < 1000; i = i + 100) {
-        rect(i, 400, 50, 400);
-      }
+      on('doubleclick', write(100, 100, 'OK'));
 
     </script>
   </body>
