--- a/example.html
+++ b/example.html
@@ -7,7 +7,8 @@
   <body>
     <script type="kidjs">
 
-      on('doubleclick', write(100, 100, 'OK'));
+      let ball = circle(500, 500, 100);
+      ball.move(100);
 
     </script>
   </body>
