Grow and shrink animations for circle

--- a/example.html
+++ b/example.html
@@ -8,7 +8,10 @@
     <script type="kidjs">
 
       let ball = circle(500, 500, 100);
-      ball.move(100);
+      ball.grow(100);
+      wait(5);
+      ball.shrink(100);
+
 
     </script>
   </body>
