--- a/example.html
+++ b/example.html
@@ -7,11 +7,12 @@
   <body>
     <script type="kidjs">
 
-      let ball = circle(500, 500, 100);
-      ball.grow(100);
-      wait(5);
-      ball.shrink(100);
-
+      fill = 'black'
+      rect(200, 200, 10, 10)
+      rect(350, 300, 10, 10)
+      rect(450, 100, 10, 10)
+      rect(600, 200, 10, 10)
+      curve(200, 200, 350, 300, 450, 100, 600, 200)
 
     </script>
   </body>
