--- a/example.html
+++ b/example.html
@@ -7,12 +7,8 @@
   <body>
     <script type="kidjs">
 
-      fill = 'black'
-      rect(200, 200, 10, 10)
-      rect(350, 300, 10, 10)
-      rect(450, 100, 10, 10)
-      rect(600, 200, 10, 10)
-      curve(200, 200, 350, 300, 450, 100, 600, 200)
+      triangle(250, 200, 250)
+      triangle(550, 200, 250, 350)
 
     </script>
   </body>
