--- a/example.html
+++ b/example.html
@@ -7,8 +7,8 @@
   <body>
     <script type="kidjs">
 
-      triangle(250, 200, 250)
-      triangle(550, 200, 250, 350)
+      let ball = circle(400, 200, 250)
+      console.log(ball.moveTo(100, 100).moveTo(500, 500));
 
     </script>
   </body>
