--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
     <script type="kidjs">
 
       let ball = circle(400, 200, 250)
-      console.log(ball.moveTo(100, 100).moveTo(500, 500));
+      ball.moveTo(100, 100).moveTo(500, 500).repeat(2);
 
     </script>
   </body>
