--- a/example.html
+++ b/example.html
@@ -7,6 +7,8 @@
   <body>
     <script type="kidjs">
 
+      fill = 'red'
+      easing = 'linear'
       let ball = circle(400, 200, 250)
       ball.moveTo(100, 100).moveTo(500, 500).repeat(2);
 
