Walls, ceiling and floor

--- a/example.html
+++ b/example.html
@@ -8,8 +8,9 @@
     <script type="kidjs">
 
       let ball = circle(400, 200, 250)
-      clear();
-      
+      ball.push(4, 4);
+      walls = false
+
     </script>
   </body>
 </html>
