Debug toggle walls

--- a/example.html
+++ b/example.html
@@ -9,7 +9,7 @@
 
       let ball = circle(400, 200, 250)
       ball.push(4, 4);
-      walls = false
+      //walls = false
 
     </script>
   </body>
