Cleaned up walls, ceiling and floor

--- a/example.html
+++ b/example.html
@@ -8,8 +8,10 @@
     <script type="kidjs">
 
       let ball = circle(400, 200, 250)
+      let box = rect(400, 400, 400, 30)
+      box.ghost = true
       ball.push(4, 4);
-      //walls = false
+      walls = false
 
     </script>
   </body>
