--- a/example.html
+++ b/example.html
@@ -10,6 +10,7 @@
       let a = circle(100, 100, 50);
       let b = circle(400, 100, 50);
       let g = group(a, b);
+      b.anchored = false;
 
     </script>
   </body>
