--- a/example.html
+++ b/example.html
@@ -7,10 +7,10 @@
   <body>
     <script type="kidjs">
 
-      let a = circle(100, 100, 50);
+      let a = circle(100, 50, 50);
       let b = circle(400, 100, 50);
       let g = group(a, b);
-      b.anchored = false;
+      g.anchored = false;
 
     </script>
   </body>
