--- a/example.html
+++ b/example.html
@@ -7,10 +7,20 @@
   <body>
     <script type="kidjs">
 
-      let a = circle(100, 50, 50);
-      let b = circle(400, 100, 50);
-      let g = group(a, b);
-      g.anchored = false;
+      let a = rect(400, 120, 140, 70)
+      let b = semicircle(400, 120, 140).rotate(180)
+      let c = semicircle(400, 210, 250)
+      let d = triangle(340, 290, 10, 60).rotate(200)
+      let e = triangle(460, 290, 10, 60).rotate(160)
+
+      a.fill = 'palegreen'
+      b.fill = 'palegreen'
+      c.fill = 'limegreen'
+      d.fill = 'limegreen'
+      e.fill = 'limegreen'
+
+      let saucer = group(a, b, c, d, e)
+      saucer.push(4, -4)
 
     </script>
   </body>
