--- a/example.html
+++ b/example.html
@@ -7,20 +7,12 @@
   <body>
     <script type="kidjs">
 
-      let a = rect(400, 120, 70, 50)
-      let b = semicircle(400, 90, 70).rotate(180)
-      let c = semicircle(400, 170, 120)
-      let d = triangle(360, 200, 10, 50).rotate(200)
-      let e = triangle(440, 200, 10, 50).rotate(160)
+      let box = rect(100, 100, 40, 40)
+      box.fill = 'indigo';
 
-      a.fill = 'palegreen'
-      b.fill = 'palegreen'
-      c.fill = 'limegreen'
-      d.fill = 'limegreen'
-      e.fill = 'limegreen'
-
-      let saucer = group(a, b, c, d, e)
-      saucer.push(0, -3)
+      console.log(box.r);
+      console.log(box.g);
+      console.log(box.b);
 
     </script>
   </body>
