--- a/example.html
+++ b/example.html
@@ -10,6 +10,10 @@
       let box = rect(100, 100, 40, 40)
       box.fill = 'indigo';
 
+      box.r = 255;
+      box.g = 0;
+      box.b = 0;
+
       console.log(box.r);
       console.log(box.g);
       console.log(box.b);
