--- a/example.html
+++ b/example.html
@@ -9,14 +9,7 @@
 
       let box = rect(100, 100, 40, 40)
       box.fill = 'indigo';
-
-      box.r = 255;
-      box.g = 0;
-      box.b = 0;
-
-      console.log(box.r);
-      console.log(box.g);
-      console.log(box.b);
+      box.animate({fill: 'red'}, 5);
 
     </script>
   </body>
