Mouse events on mobile

--- a/example.html
+++ b/example.html
@@ -7,9 +7,7 @@
   <body>
     <script type="kidjs">
 
-      let box = rect(100, 100, 40, 40)
-      box.fill = 'indigo';
-      box.animate({fill: 'red'}, 5);
+      write('Hello world')
 
     </script>
   </body>
