Animate size property on regular polygons

--- a/example.html
+++ b/example.html
@@ -7,7 +7,8 @@
   <body>
     <script type="kidjs">
 
-      write('Hello world')
+      let a = octagon(width / 2, height / 2, 250)
+      a.grow(100)
 
     </script>
   </body>
