Reset cursor position when stage cleared

--- a/example.html
+++ b/example.html
@@ -7,12 +7,9 @@
   <body>
     <script type="kidjs">
 
-      let t = 'Holding steady'
-      display(width / 2, height / 2, t)
-      on('tiltleft', t = 'Left')
-      on('tiltright', t = 'Right')
-      on('tiltup', t = 'Up')
-      on('tiltdown', t = 'Down')
+      write('Test 1');
+      clear();
+      write('Test 2');
 
     </script>
   </body>
