--- a/example.html
+++ b/example.html
@@ -7,9 +7,7 @@
   <body>
     <script type="kidjs">
 
-      write('Test 1');
-      clear();
-      write('Test 2');
+      rect(100, 100, 50, 50)
 
     </script>
   </body>
