--- a/example.html
+++ b/example.html
@@ -7,6 +7,10 @@
   <body>
     <script type="kidjs">
 
+      for (let i = 0; i < 10; i = i -1) {
+        rect(10, 10, 10, 10);
+      }
+
       function placeDomino(x, y) {
         let domino = rect(x, y, 20, 100)
         domino.anchored = false
