--- a/example.html
+++ b/example.html
@@ -7,7 +7,9 @@
   <body>
     <script type="kidjs">
 
-      let test = hexagon(200, 200, 100);
+      pie(30, 40, 300);
+
+      let test = circle(200, 200, 100);
       on('click', function() {
         test.explode();
       });
