--- a/example.html
+++ b/example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Hello World</title>
+    <title>Dominos</title>
     <script src="dist/kid.js"></script>
   </head>
   <body>
